fix command in csv

--- a/manifests/openshift-jenkins-operator/0.6.0/manifests/jenkins-operator.0.6.0.clusterserviceversion.yaml
+++ b/manifests/openshift-jenkins-operator/0.6.0/manifests/jenkins-operator.0.6.0.clusterserviceversion.yaml
@@ -205,7 +205,7 @@ spec:
             spec:
               containers:
               - command:
-                - jenkins-operator
+                - /manager
                 env:
                 - name: WATCH_NAMESPACE
                   valueFrom:
