--- a/manifests/openshift-jenkins-operator/0.0.0/manifests/jenkins-operator.0.0.0.clusterserviceversion.yaml
+++ b/manifests/openshift-jenkins-operator/0.0.0/manifests/jenkins-operator.0.0.0.clusterserviceversion.yaml
@@ -210,7 +210,7 @@ spec:
             spec:
               containers:
               - command:
-                - jenkins-operator
+                - /manager
                 env:
                 - name: WATCH_NAMESPACE
                   valueFrom:
