--- a/manifests/openshift-jenkins-operator/0.6.0/manifests/jenkins-operator.0.6.0.clusterserviceversion.yaml
+++ b/manifests/openshift-jenkins-operator/0.6.0/manifests/jenkins-operator.0.6.0.clusterserviceversion.yaml
@@ -18,16 +18,10 @@ metadata:
             "makeBackupBeforePodDeletion": false
           },
           "configurationAsCode": {
-            "configurations": null,
-            "secret": {
-              "name": ""
-            }
-          },
-          "groovyScripts": {
-            "configurations": null,
-            "secret": {
-              "name": ""
-            }
+            "enabled": true
+            "defaultConfig": true
+            "enableAutoReload": true
+            "configurations": [],
           },
           "clusterRoles": [
             {
