Fix json example

--- a/manifests/openshift-jenkins-operator/0.6.0/manifests/jenkins-operator.0.6.0.clusterserviceversion.yaml
+++ b/manifests/openshift-jenkins-operator/0.6.0/manifests/jenkins-operator.0.6.0.clusterserviceversion.yaml
@@ -18,9 +18,9 @@ metadata:
             "makeBackupBeforePodDeletion": false
           },
           "configurationAsCode": {
-            "enabled": true
-            "defaultConfig": true
-            "enableAutoReload": true
+            "enabled": true,
+            "defaultConfig": true,
+            "enableAutoReload": true,
             "configurations": [],
           },
           "clusterRoles": [
