--- a/smoke/samples/jenkins.yaml
+++ b/smoke/samples/jenkins.yaml
@@ -3,3 +3,8 @@ kind: Jenkins
 metadata:
   name: simple
   namespace: PROJECT
+spec:
+  master:
+    containers:
+      - name: jenkins
+        image: 'quay.io/redhat-developer/origin-jenkins:4.7-stable'
