Change entrypoint from /manager to /jenkins-operator in 0.0.0 CVS for testing

--- a/manifests/jenkins-operator/0.0.0/manifests/jenkins-operator.0.0.0.clusterserviceversion.yaml
+++ b/manifests/jenkins-operator/0.0.0/manifests/jenkins-operator.0.0.0.clusterserviceversion.yaml
@@ -186,7 +186,7 @@ spec:
             spec:
               containers:
               - command:
-                - /manager
+                - /jenkins-operator
                 env:
                 - name: WATCH_NAMESPACE
                   valueFrom:
